# cinemac

./: .gitignore  license.md  readme.md
env/: darwin.sh  dekstop_pascal.sh
hacc_halo_tracking/: HaloTracing.py  readme.md
src/: CMakeLists.txt  test.cxx
src/cinema/: CMakeLists.txt  CinBase.cxx  CinBase.h  CinDBWriter.cxx  CinDBWriter.h  CinDatabase.cxx  CinDatabase.h  CinDatabase.hpp  CinPipeline.cxx  CinPipeline.h  dataset.hpp
src/cinema/readers/: CinDataLoaderFactory.h  CinLoaderInterface.h
src/cinema/readers/vtk_loader/: CinVTKUnstructredGridLoader.hpp
src/cinema/renderers/: CinRenderInterface.h  CinRendererFactory.h
src/cinema/renderers/ospray/: ArcballCamera.cpp  ArcballCamera.h  CinOSPRayRenderer.hpp
src/cinema/renderers/vtk/: CinVTKRenderer.hpp
src/cinema/renderers/vtk/vtkStructures/: unstructuredGrid.h
src/cinema/utils/: dataStructures.hpp  density.hpp  image.hpp  log.hpp  readUnstructuredGrid.h  timer.hpp  utils.hpp
src/cinema/vtkStructures/: ._unstructuredGrid.h  unstructuredGrid.h
src/hacc_halo_tracking/: HaloTracing.py  InsituDash.ipynb  readme.md
src/tests/: CMakeLists.txt  database.cxx  dbcreate.cxx  dbtest.cxx  testDataset.cpp
testdata/: extracted.pvtu
